# rae_task

./: .gitignore  README.md  pre-commit.yaml  pyproject.toml  requirements.txt
core/: .env.dist  settings.py  urls.py
templates/: base.html
templates/forms/: multi_step_form.html
templates/users/: login.html  register.html
templates/vcards/: create_vcard.html  vcard_detail.html
users/: urls.py  views.py
vcards/: apps.py  forms.py  models.py  urls.py  views.py
vcards/migrations/: 0001_initial.py  0002_remove_vcard_unique_vcard_file.py  0003_remove_vcard_unique_qr_code_vcard_qr_code.py  0004_alter_vcard_qr_code.py  0005_alter_vcard_qr_code.py  0006_vcard_vcard_file.py
