[tool.poetry]
name = "rae-task"
version = "0.1.0"
description = ""
authors = ["Mateusz Samek <samekmat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
mysqlclient = "^2.2.4"
django-environ = "^0.11.2"
pre-commit = "^3.7.0"
black = "^24.4.2"
ruff = "^0.4.2"
crispy-bootstrap5 = "^2024.2"
pillow = "^10.3.0"
qrcode = "^7.4.2"
django-formtools = "^2.5.1"
vobject = "^0.9.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
